--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,5 @@
+set(CMAKE_CXX_FLAGS "-std=c++17 -pedantic -Wall -Wextra -Werror")
+
 project(oop_exercise_04)
 
 add_executable(oop_exercise_04 main.cpp)
